Set margins on rows to 0px, mobile overflow fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,10 @@ this solution does not address the element being out of bounds, and will still n
 	text-shadow: 2px 2px black;
 }
 
+body > .row {
+	margin-left: 0px;
+	margin-right: 0px;
+}
 
 .bottomPadding {
 	height: 12.5%;
